src/parser/snapshots/rbx_rsml__parser__tests__macro_selector_overload.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Macro {
        pub_modifier: None,
        declaration: Node {
            token: SpannedToken(
                0,
                MacroDeclaration,
                6,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    7,
                    Identifier(
                        "Sel",
                    ),
                    10,
                ),
                leading_trivia: None,
            },
        ),
        args: None,
        return_type: Some(
            (
                Node {
                    token: SpannedToken(
                        11,
                        ReturnArrow,
                        13,
                    ),
                    leading_trivia: None,
                },
                Some(
                    Node {
                        token: SpannedToken(
                            14,
                            Identifier(
                                "Selector",
                            ),
                            22,
                        ),
                        leading_trivia: None,
                    },
                ),
            ),
        ),
        body: Some(
            MacroBody {
                open: Node {
                    token: SpannedToken(
                        23,
                        ScopeOpen,
                        24,
                    ),
                    leading_trivia: None,
                },
                content: Selector(
                    Some(
                        [
                            Token(
                                Node {
                                    token: SpannedToken(
                                        25,
                                        Identifier(
                                            "A",
                                        ),
                                        26,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        ],
                    ),
                ),
                close: Some(
                    Node {
                        token: SpannedToken(
                            27,
                            ScopeClose,
                            28,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
    Macro {
        pub_modifier: None,
        declaration: Node {
            token: SpannedToken(
                29,
                MacroDeclaration,
                35,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    36,
                    Identifier(
                        "Sel",
                    ),
                    39,
                ),
                leading_trivia: None,
            },
        ),
        args: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        39,
                        ParensOpen,
                        40,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    40,
                                    MacroArgIdentifier(
                                        Some(
                                            "x",
                                        ),
                                    ),
                                    42,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            42,
                            ParensClose,
                            43,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
        return_type: Some(
            (
                Node {
                    token: SpannedToken(
                        44,
                        ReturnArrow,
                        46,
                    ),
                    leading_trivia: None,
                },
                Some(
                    Node {
                        token: SpannedToken(
                            47,
                            Identifier(
                                "Selector",
                            ),
                            55,
                        ),
                        leading_trivia: None,
                    },
                ),
            ),
        ),
        body: Some(
            MacroBody {
                open: Node {
                    token: SpannedToken(
                        56,
                        ScopeOpen,
                        57,
                    ),
                    leading_trivia: None,
                },
                content: Selector(
                    Some(
                        [
                            Token(
                                Node {
                                    token: SpannedToken(
                                        58,
                                        Identifier(
                                            "B",
                                        ),
                                        59,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        ],
                    ),
                ),
                close: Some(
                    Node {
                        token: SpannedToken(
                            60,
                            ScopeClose,
                            61,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
    Rule {
        selectors: Some(
            [
                MacroCall {
                    name: Node {
                        token: SpannedToken(
                            62,
                            MacroCallIdentifier(
                                Some(
                                    "Sel",
                                ),
                            ),
                            66,
                        ),
                        leading_trivia: None,
                    },
                    body: Some(
                        Delimited {
                            left: Node {
                                token: SpannedToken(
                                    66,
                                    ParensOpen,
                                    67,
                                ),
                                leading_trivia: None,
                            },
                            content: None,
                            right: Some(
                                Node {
                                    token: SpannedToken(
                                        67,
                                        ParensClose,
                                        68,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ),
                },
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        69,
                        ScopeOpen,
                        70,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            71,
                            ScopeClose,
                            72,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
    Rule {
        selectors: Some(
            [
                MacroCall {
                    name: Node {
                        token: SpannedToken(
                            73,
                            MacroCallIdentifier(
                                Some(
                                    "Sel",
                                ),
                            ),
                            77,
                        ),
                        leading_trivia: None,
                    },
                    body: Some(
                        Delimited {
                            left: Node {
                                token: SpannedToken(
                                    77,
                                    ParensOpen,
                                    78,
                                ),
                                leading_trivia: None,
                            },
                            content: Some(
                                [
                                    Node {
                                        node: Node {
                                            token: SpannedToken(
                                                78,
                                                Number(
                                                    "1",
                                                ),
                                                79,
                                            ),
                                            leading_trivia: None,
                                        },
                                    },
                                ],
                            ),
                            right: Some(
                                Node {
                                    token: SpannedToken(
                                        79,
                                        ParensClose,
                                        80,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ),
                },
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        81,
                        ScopeOpen,
                        82,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            83,
                            ScopeClose,
                            84,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
